--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,17 @@
     "description": "Delivers fresh tweet from your selection of sources to your new tab",
     "manifest_version": 2,
 
-    "content_security_policy": "script-src 'self' ./; object-src 'self'",
+    "content_security_policy": "script-src 'self' https://platform.twitter.com; object-src 'self'",
+
+    "page_action": {
+        "default_popup": "mocking-bird.html",
+        "default_icon": {
+            "16": "mocking-bird-final.png",
+            "32": "mocking-bird-final.png",
+            "48": "mocking-bird-final.png",
+            "128": "mocking-bird-final.png"
+        }
+    },
 
     "permissions": [
         "activeTab",
